# motor_sine

install/: local_setup.sh  setup.sh
install/motor_sine/lib/motor_sine/: sine_pub
install/motor_sine/share/ament_index/resource_index/package_run_dependencies/: motor_sine
install/motor_sine/share/motor_sine/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_sine/share/motor_sine/cmake/: motor_sineConfig.cmake
install/odrive_can/include/odrive_can/odrive_can/msg/detail/: control_message__builder.hpp  control_message__description.c  control_message__functions.c  control_message__rosidl_typesupport_fastrtps_cpp.hpp  control_message__type_support.c  control_message__type_support.cpp  controller_status__builder.hpp  controller_status__description.c  (+12 more)
install/odrive_can/share/ament_index/resource_index/parent_prefix_path/: odrive_can
install/odrive_can/share/odrive_can/: local_setup.sh  package.dsv  package.ps1  package.sh
install/odrive_can/share/odrive_can/cmake/: export_odrive_can__rosidl_generator_pyExport-noconfig.cmake  export_odrive_can__rosidl_generator_pyExport.cmake  export_odrive_can__rosidl_typesupport_fastrtps_cExport.cmake  odrive_can__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/odrive_can/share/odrive_can/msg/: ControlMessage.json  ControllerStatus.json  ODriveStatus.json
install/odrive_can/share/odrive_can/srv/: AxisState.json
log/: latest_build
src/motor_sine/: CMakeLists.txt
src/motor_sine/src/: sine_pub.cpp
(+5 files in other folders)
